# pdf-downloader

./: pyproject.toml
scraper/: Downloader.py  main.py
