[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Alexandre J. Martins <contato@ajmartins.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
